# ChangeLog for dev-lang/R
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/R/ChangeLog,v 1.27 2004/07/11 17:47:32 kugelfang Exp $

  11 Jul 2004; Danny van Dyk <kugelfang@gentoo.org> R-1.8.1.ebuild,
  R-1.9.0-r1.ebuild, R-1.9.0.ebuild:
  Fixed BUG #56616. Tidied up g77/f2c check in >=R-1.9.0. Added f2c USE flag.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> R-1.8.1.ebuild,
  R-1.9.0-r1.ebuild, R-1.9.0.ebuild:
  virtual/glibc -> virtual/libc

  01 Jul 2004; Danny van Dyk <kugelfang@gentoo.org> R-1.8.1.ebuild,
  R-1.9.0-r1.ebuild, R-1.9.0.ebuild:
  Fixed BUG #55386 for amd64. Pending for rest of arches.

*R-1.9.0-r1 (05 Jun 2004)

  05 Jun 2004; Patrick Kursawe <phosphan@gentoo.org> R-1.9.0-r1.ebuild:
  Added a few USE flags according to suggestions by Leo Chen <lcheu@cs.sfu.ca>

  28 May 2004; Patrick Kursawe <phosphan@gentoo.org> R-1.9.0.ebuild:
  Removing the f77 USE flag check - just giving a hint when no g77 found.

  17 May 2004; Patrick Kursawe <phosphan@gentoo.org> R-1.9.0.ebuild:
  adding f77 to IUSE

  11 May 2004; Patrick Kursawe <phosphan@gentoo.org> R-1.9.0.ebuild:
  pkg_setup checks for g77 presence now.

  20 Apr 2004; Patrick Kursawe <phosphan@gentoo.org> R-1.9.0.ebuild:
  Changed dependency - works also with current libglade, see bug #47825

*R-1.9.0 (13 Apr 2004)

  13 Apr 2004; Patrick Kursawe <phosphan@gentoo.org> R-1.8.1.ebuild,
  R-1.9.0.ebuild:
  Version bump, added write permission for /var/cache/fonts

  01 Apr 2004; Patrick Kursawe <phosphan@gentoo.org> R-1.8.0.ebuild,
  R-1.8.1.ebuild:
  1.8.1 is stable

  22 Mar 2004; Patrick Kursawe <phosphan@gentoo.org> R-1.8.1.ebuild:
  Fixing bug #40100 (problems with newer Xfree)

  25 Feb 2004; Patrick Kursawe <phosphan@gentoo.org> R-1.4.1-r1.ebuild,
  R-1.4.1.ebuild, R-1.5.1.ebuild, R-1.6.1.ebuild, R-1.6.2.ebuild,
  R-1.7.0.ebuild, R-1.7.1.ebuild, R-1.8.0.ebuild, files/R-1.5.1-tcltk.diff: