@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/R/Attic/R-1.8.1.ebuild,v 1.11 2004/07/15 13:03:12 kugelfang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/R/Attic/R-1.8.1.ebuild,v 1.12 2004/08/11 15:39:15 kugelfang Exp $
 
 IUSE="X atlas f77 gnome tcltk"
 
@@ -33,7 +33,7 @@ DEPEND="virtual/libc
 			>=dev-libs/glib-1.2.10
 			>=media-sound/esound-0.2.23
 			>=media-libs/audiofile-0.2.1 )"
-S
+
 SLOT="0"
 LICENSE="GPL-2 LGPL-2.1"
 KEYWORDS="x86 sparc ppc amd64"
